--- a/user-authenticator/src/main/resources/application.yml
+++ b/user-authenticator/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     password: pass
   h2:
     console:
-      enabled: false
+      enabled: true
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
