--- a/user-authenticator/src/main/resources/application.yml
+++ b/user-authenticator/src/main/resources/application.yml
@@ -4,15 +4,23 @@ server:
 jwt:
   secret: myJWTSecret12345
 
+logging:
+  level:
+    root: INFO
+
 spring:
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
     username: sayan
     password: pass
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
   h2:
     console:
-      enabled: true
+      enabled: false
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
