add user details api call webclient

--- a/user-authenticator/src/main/resources/application.yml
+++ b/user-authenticator/src/main/resources/application.yml
@@ -9,6 +9,8 @@ logging:
     root: INFO
 
 spring:
+  application:
+    name: user-auth-service
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
