add login page, add bootstrap support

--- a/webclient/src/main/resources/application.yml
+++ b/webclient/src/main/resources/application.yml
@@ -1,5 +1,11 @@
 server:
   port: 8082
-spring:
+  servlet:
+    context-path: /
   application:
     name: webclient-service
+  thymeleaf:
+    suffix: .html
+eureka:
+  instance:
+    preferIpAddress: true
