--- a/user-authenticator/src/main/resources/application.yml
+++ b/user-authenticator/src/main/resources/application.yml
@@ -26,3 +26,7 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+      
+eureka:
+  instance:
+    preferIpAddress: true
