update api done, loader added

--- a/webclient/src/main/resources/application.yml
+++ b/webclient/src/main/resources/application.yml
@@ -13,6 +13,7 @@ eureka:
 service:
   url:
     register: /user/create
+    updateUser: /user/update
     login: /jwt/auth
     logout: /jwt/invalidate
     getUserDetails: /user/
