add reset password api call all functional point done

--- a/webclient/src/main/resources/application.yml
+++ b/webclient/src/main/resources/application.yml
@@ -15,6 +15,7 @@ service:
     register: /user/create
     updateUser: /user/update
     forgotPassword: /user/forgotPassword
+    resetPassword: /user/resetPassword
     login: /jwt/auth
     logout: /jwt/invalidate
     getUserDetails: /user/
